# gchat-logging-handler

./: .gitignore  README.md  setup.cfg  setup.py
src/gchat_logging_handler/: __init__.py  __main__.py
