[metadata]
name = gchat_logging_handler
description = Logging handler to send the logs to Google Chat (GChat) room/space.
author = Geraldo Castro
author_email = victormatheuscastro@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/exageraldo/gchat_logging_handler
project_urls =
    Bug Tracker = https://github.com/exageraldo/gchat_logging_handler/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
package_dir = = src
packages =
    gchat_logging_handler
# Dependencies are in setup.py for GitHub's dependency graph.
